# TimeTracker

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
assets/: worklog.desktop
examples/: db_probe.rs  glyph_probe.rs  idle_probe.rs  pdf_preview.rs
src/: app.rs  idle.rs  main.rs
src/db/: log_entry.rs  mod.rs  project.rs  task.rs
src/report/: mod.rs  pdf.rs
src/ui/: help.rs  journal.rs  mod.rs  projects.rs  reports.rs  search.rs  tasks.rs
